[project]
name = "frt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "asyncpg>=0.30.0",
    "databases>=0.9.0",
    "fastapi-login>=1.10.2",
    "fastapi[standard]>=0.115.4",
    "names>=0.3.0",
    "opentele>=1.15.1",
    "phone-iso3166>=0.4.1",
    "psycopg2>=2.9.10",
    "pydantic>=2.9.2",
    "pyrogram>=2.0.106",
    "sqlalchemy>=2.0.36",
    "stream-sqlite>=0.0.41",
    "uvicorn>=0.32.0",
]
